--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@ img {
 
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
-  font-size: 16px;
+  font-size: clamp(14px, 2vw, 16px);
   font-weight: 500;
   color: hsl(219, 12%, 42%);
   background-color: hsl(205, 33%, 90%);
@@ -86,7 +86,7 @@ a:hover {
   align-items: normal;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(1fr, auto);
-  gap: 1rem;
+  gap: 0.4rem;
   width: 580px;
   margin-top: 4rem;
   padding: 1rem 1.4rem;
@@ -104,7 +104,8 @@ a:hover {
   font-size: 1.2em;
 }
 .container .container-header h1 #notification-number {
-  font-size: 0.8em;
+  font-size: 0.7em;
+  font-weight: 500;
   color: hsl(0, 0%, 100%);
   background-color: hsl(219, 85%, 26%);
   border-radius: 4px;
@@ -118,7 +119,7 @@ a:hover {
   grid-template-columns: 2.3rem 1fr;
   grid-template-rows: auto;
   gap: 1rem;
-  padding: 1rem;
+  padding: 0.8rem 1rem;
   border-radius: 5px;
   background-color: hsl(0, 0%, 100%);
   font-size: 0.8em;
@@ -133,7 +134,7 @@ a:hover {
 
 #private-message {
   grid-column: 2/3;
-  padding: 1rem;
+  padding: 0.8rem 1rem;
   border-radius: 5px;
   border: 1px solid hsl(211, 68%, 94%);
   text-align: left;
@@ -164,7 +165,7 @@ a:hover {
 }
 
 .attribution {
-  font-size: 11px;
+  font-size: clamp(10px, 2vw, 11px);
   text-align: center;
   margin: 1rem auto;
 }
